tests/errors/e_tstring_unclosed6.pyx
# mode: error

t'{a'

_ERRORS = """
3:5: Unclosed string literal
"""
